# MKRShift_Nodes

./: .gitignore  AGENTS.md  README.md  __init__.py  categories.py  extension.builder.json  nodes.py  preview_collage.py  pyproject.toml  social_pack.py  v3_extension.py  xcine.py  xcolor.py  xconcepts.py  xlut.py  xmask.py  xmedia_batch1_nodes.py  xmedia_batch2_nodes.py  xmedia_batch3_nodes.py  xmedia_batch4_nodes.py  xmedia_batch5_nodes.py  xmedia_batch6_nodes.py  xmedia_extra_nodes.py  xmedia_nodes.py  xphoto.py  xplay.py  xpresave.py  xpresave_media.py  xprocess.py  xresize.py  xshader.py  xutility_photo.py
addons/: README.md
blender_extension/: README.md  build_addon_zip.py
data/: prompt_bookmarks.json
example_workflows/: mkrshift_extension_builder_plan.json
lib/: __init__.py  addon_workflow_shared.py  blender_bridge_shared.py  gcode_mesh.py  gcode_shared.py  gcode_slicer.py  host_bridge_shared.py  host_image_bridge_shared.py  image_shared.py  layer_stack_shared.py  material_preview_export.py  material_response_shared.py  native_3d_bridge.py  network_runtime_shared.py  pose_image_fit.py  pose_studio_shared.py  procedural_texture_shared.py  prompt_bookmarks.py  scalar_map_shared.py  settings_bundle.py  technical_art_shared.py  texture_shared.py  vfx_shared.py
luts/: README.md
nodes/: __init__.py  addon_debug_nodes.py  addon_workflow_nodes.py  adobe_bridge_nodes.py  adobe_image_bridge_nodes.py  blender_image_bridge_nodes.py  bridge_nodes.py  character_state_nodes.py  core_nodes.py  dcc_3d_image_bridge_nodes.py  dcc_bridge_nodes.py  extension_builder_nodes.py  (+64 more)
(+323 files in other folders)
