[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mkrshift-nodes"
version = "0.1.0"
description = "ComfyUI custom nodes for character direction, color workflows, social planning, and media finishing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
v3 = []

[tool.comfy]
DisplayName = "MKRShift Nodes"

# Fill these before registry publishing:
# PublisherId = "your-publisher-id"
# requires-comfyui = ">=0.16.0"
#
# [project.urls]
# Repository = "https://github.com/owner/repo"
